--- a/mSprayApp/res/layout/confirm_unsprayed.xml
+++ b/mSprayApp/res/layout/confirm_unsprayed.xml
@@ -2,15 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@drawable/darkgray"
     android:screenOrientation="portrait" >
 
     <TextView
         android:id="@+id/confirm_unsprayed_textview_title"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
+        android:background="@drawable/grad3"
         android:gravity="center"
         android:text="@string/confirmNoSpray"
         android:textSize="28sp" />
@@ -20,14 +22,20 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/confirm_unsprayed_textview_title"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="12dp" >
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="16dp" >
 
         <TableRow
             android:id="@+id/confirm_unsprayed_rooms_unsprayed_row"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="5dp" >
+            android:layout_marginTop="8dp"
+            android:background="@android:color/white"
+            android:paddingBottom="8dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingTop="8dp" >
 
             <TextView
                 android:id="@+id/confirm_unsprayed_rooms_unsprayed_label"
@@ -48,7 +56,12 @@
             android:id="@+id/confirm_unsprayed_shelters_unsprayed_row"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="5dp" >
+            android:layout_marginTop="8dp"
+            android:background="@android:color/white"
+            android:paddingBottom="8dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingTop="8dp" >
 
             <TextView
                 android:id="@+id/confirm_unsprayed_shelters_unsprayed_label"
@@ -70,23 +83,30 @@
         android:id="@+id/confirm_unsprayed_layout_innerLinearLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" >
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/darkgray"
+        android:padding="9dp" >
 
         <Button
             android:id="@+id/confirm_unsprayed_button_backButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginRight="3dp"
             android:layout_weight="0.5"
+            android:background="@drawable/button_selector_red"
             android:text="@string/back"
+            android:textColor="#fff"
             android:textSize="28sp" />
 
         <Button
             android:id="@+id/confirm_unsprayed_button_confirmButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="3dp"
             android:layout_weight="0.5"
-            android:onClick="getData"
+            android:background="@drawable/button_selector_green"
             android:text="@string/confirm"
+            android:textColor="#fff"
             android:textSize="28sp" />
     </LinearLayout>
 
