--- a/mSprayApp/res/layout/scan_rfid.xml
+++ b/mSprayApp/res/layout/scan_rfid.xml
@@ -1,28 +1,29 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/scanRFIDLayout"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content" >
-    
+    android:layout_height="fill_parent"
+    android:background="@drawable/darkgray" >
+
     <TextView
         android:id="@+id/scan_rfid_instructions"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
-        android:layout_below="@+id/scan_rfid_image"
-        android:text="@string/scanBadge"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textSize="50sp" />
-
-    <ImageView
-        android:id="@+id/scan_rfid_image"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/grad3"
+        android:gravity="center"
+        android:text="@string/scanBadge"
+        android:textSize="28sp" />
+
+    <ImageView
+        android:id="@+id/scan_rfid_image"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/scan_rfid_instructions"
+        android:layout_centerHorizontal="true"
         android:layout_margin="24dp"
+        android:background="@android:color/white"
         android:contentDescription="@string/nfcInstructions"
         android:src="@drawable/badgenew" />
 
