--- a/mSprayApp/res/layout/sprayer_form.xml
+++ b/mSprayApp/res/layout/sprayer_form.xml
@@ -2,59 +2,68 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/darkgray"
     android:orientation="vertical"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:screenOrientation="portrait"
     tools:context=".MSpray" >
+
+    <TextView
+        android:id="@+id/sprayer_form_textview_header"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/grad3"
+        android:gravity="center"
+        android:text="@string/sprayHeader"
+        android:textSize="28sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/sprayer_form_textview_header"
+        android:layout_marginTop="16dp"
         android:orientation="vertical" >
-        
-        <TextView
-            android:id="@+id/sprayer_form_textview_header"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/sprayHeader"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="28sp" />
 
         <TextView
             android:id="@+id/sprayer_form_textview_sprayerName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:gravity="center"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
             android:text="@string/sprayerName"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#fff"
             android:textSize="28sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:orientation="horizontal" >
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:orientation="horizontal"
+            android:padding="12dp" >
 
             <TextView
                 android:id="@+id/sprayer_form_textview_roomsSprayed"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/roomsSprayedLabel"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_weight="0.5"
+                android:text="@string/rooms"
+                android:textColor="#fff"
                 android:textSize="24sp" />
 
             <EditText
                 android:id="@+id/sprayer_form_edittext_roomsSprayedValue"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginLeft="6dp"
+                android:layout_weight="0.5"
                 android:ems="10"
                 android:inputType="number"
                 android:textSize="24sp" >
@@ -66,26 +75,27 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:orientation="horizontal" >
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:orientation="horizontal"
+            android:padding="12dp" >
 
             <TextView
                 android:id="@+id/sprayer_form_textview_sheltersSprayed"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/sheltersSprayedLabel"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_weight="0.5"
+                android:text="@string/shelters"
+                android:textColor="#fff"
                 android:textSize="24sp" />
 
             <EditText
                 android:id="@+id/sprayer_form_edittext_sheltersSprayedValue"
-                android:layout_width="0dip"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginLeft="6dp"
+                android:layout_weight="0.5"
                 android:ems="10"
                 android:inputType="number"
                 android:textSize="24sp" >
@@ -95,63 +105,78 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:orientation="horizontal"
+            android:padding="12dp" >
 
             <TextView
                 android:id="@+id/sprayer_form_textview_canRefilled"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="12dp"
-                android:layout_marginRight="12dp"
+                android:layout_weight="0.5"
                 android:text="@string/refillCanLabel"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#fff"
                 android:textSize="24sp" />
 
             <RadioGroup
                 android:id="@+id/sprayer_form_radiogroup"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="6dp"
+                android:layout_weight="0.5"
                 android:orientation="horizontal" >
 
                 <RadioButton
                     android:id="@+id/sprayer_form_radiobutton_canRefilledYes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
                     android:checked="false"
-                    android:text="@string/yes" />
+                    android:text="@string/yes"
+                    android:textColor="#fff" />
 
                 <RadioButton
                     android:id="@+id/sprayer_form_radiobutton_canRefilledNo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginLeft="6dp"
                     android:checked="true"
-                    android:text="@string/no" />
+                    android:text="@string/no"
+                    android:textColor="#fff" />
             </RadioGroup>
         </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/confirm_no_spray_layout_innerLinearLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" >
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/darkgray"
+        android:padding="9dp" >
 
         <Button
             android:id="@+id/sprayer_form_button_backButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginRight="3dp"
             android:layout_weight="0.5"
+            android:background="@drawable/button_selector_red"
             android:text="@string/back"
+            android:textColor="#fff"
             android:textSize="28sp" />
 
         <Button
             android:id="@+id/sprayer_form_button_confirmButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="3dp"
             android:layout_weight="0.5"
+            android:background="@drawable/button_selector_green"
+            android:onClick="getData"
             android:text="@string/confirm"
+            android:textColor="#fff"
             android:textSize="28sp" />
     </LinearLayout>
 
