--- a/mSprayApp/res/layout/start_new_spray.xml
+++ b/mSprayApp/res/layout/start_new_spray.xml
@@ -2,15 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@drawable/darkgray"
     android:screenOrientation="portrait" >
 
     <TextView
         android:id="@+id/activity_start_new_spray_header"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
+        android:background="@drawable/grad3"
         android:gravity="center"
         android:text="I am Foreman."
         android:textSize="28sp" />
@@ -18,23 +20,36 @@
     <LinearLayout
         android:id="@+id/activity_start_new_spray_layout"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" 
-        android:orientation="vertical">
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/activity_start_new_spray_header"
+        android:layout_marginTop="20dp"
+        android:orientation="vertical" >
 
-        <Button
-            android:id="@+id/activity_start_new_spray_button"
-            android:layout_width="fill_parent"
+        <RelativeLayout
+            android:id="@+id/activity_start_new_spray_fake_button"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="72dp"
             android:layout_weight="0.8"
-            android:drawablePadding="-15sp"
-            android:drawableTop="@drawable/recordspray"
-            android:paddingTop="32sp"
-            android:text="@string/startSpray"
-            android:textSize="40sp" >
-        </Button>
+            android:background="@drawable/button_selector_green" >
+
+            <Button
+                android:id="@+id/activity_start_new_spray_button"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@android:color/transparent"
+                android:clickable="false"
+                android:drawablePadding="16dp"
+                android:drawableTop="@drawable/recordspray"
+                android:text="@string/startSpray"
+                android:textColor="#fff"
+                android:textSize="30sp" >
+            </Button>
+        </RelativeLayout>
 
         <Button
             android:id="@+id/activity_done_spraying_button"
@@ -42,8 +57,10 @@
             android:layout_height="0dp"
             android:layout_margin="16dp"
             android:layout_weight="0.2"
+            android:background="@drawable/button_selector_red"
             android:text="@string/doneSpraying"
-            android:textSize="40sp" >
+            android:textColor="#fff"
+            android:textSize="30sp" >
         </Button>
     </LinearLayout>
 
